[gd_scene load_steps=8 format=2]

[ext_resource path="res://items/Trigger.gd" type="Script" id=1]
[ext_resource path="res://items/materials/door_plate.tres" type="Material" id=2]
[ext_resource path="res://items/materials/goal.tres" type="Material" id=3]
[ext_resource path="res://effects/fade_pulse.tres" type="Material" id=4]
[ext_resource path="res://assets/cube_test_green_04.gltf" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=1]
material = ExtResource( 2 )
size = Vector3( 1, 0.1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.05, 0.5 )

[node name="Trigger" type="Area"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
material_override = ExtResource( 3 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
shape = SubResource( 2 )

[node name="cube_test_green_04" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Cube001" parent="cube_test_green_04" index="0"]
material/0 = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_Trigger_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Trigger_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Trigger_body_exited"]

[editable path="cube_test_green_04"]
